Make adjustments to scss file structure during group meeting

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -4,7 +4,7 @@
 body,
 html {
   margin: 0;
-  // font-size: 62.5%; //so we can use REM units. 1rem = 10px, 1.6rem = 16px, etc..
+  font-size: 62.5%; //so we can use REM units. 1rem = 10px, 1.6rem = 16px, etc..
 }
 
 // Colours
