--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,7 @@
 
 @import './base.scss';
 @import './layout.scss';
-@import './components/home_page.scss';
-@import './components/_side_panel.scss';
+@import './components/pages/home_page.scss';
+@import './components/partials/side_panel';
+
 
