--- a/views/starter-template.ejs
+++ b/views/starter-template.ejs
@@ -21,8 +21,14 @@
 </head>
 
 <body>
-  <h1>Template</h1>
+  <div class="side-panel-container">
+    <%- include('./partials/_side_panel') %>
+  </div>
 
+  <div class="main-body">
+    <h1>Template</h1>
+
+  </div>
 
 
 
