--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -13,10 +13,11 @@
   <body>
 
     <main style="margin: 1em;">
-      <h3>New Story</h3>
+      <h3>Write your story...</h3>
       <form class="form" action="/stories/new/" method="POST">
         <div class="form-group mb-2">
-          <input class="form-control" type="text" name="title" placeholder="Story title" style="width: 300px; margin: 1em">
+          <label for="title_form">TITLE:</label>
+          <input class="form-control" id="title-form" type="text" name="title" style="width: 300px; margin: 1em">
           <input class="form-control" type="text" name="flavour_text" placeholder="Story flavour_text" style="width: 300px; margin: 1em">
           <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url" style="width: 300px; margin: 1em">
           <input class="form-control" type="text" name="text" placeholder="text" style="width: 300px; margin: 1em">
