--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -16,8 +16,8 @@
       <h3>Write your story...</h3>
       <form class="form" action="/stories/new/" method="POST">
         <div class="form-group mb-2">
-          <label for="title_form">TITLE:</label>
-          <input class="form-control" id="title-form" type="text" name="title" style="width: 300px; margin: 1em">
+          <label for="title">TITLE:</label>
+          <input class="form-control" type="text" name="title" style="width: 300px; margin: 1em">
           <label for="flavour-text">CAPTION:</label>
           <input class="form-control" type="text" name="flavour_text" style="width: 300px; margin: 1em">
           <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url" style="width: 300px; margin: 1em">
