--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -20,6 +20,7 @@
           <input class="form-control" type="text" name="title" style="width: 300px; margin: 1em">
           <label for="flavour-text">CAPTION:</label>
           <input class="form-control" type="text" name="flavour_text" style="width: 300px; margin: 1em">
+          <label for"cover_photo">PHOTO:</label>
           <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url" style="width: 300px; margin: 1em">
           <input class="form-control" type="text" name="text" placeholder="text" style="width: 300px; margin: 1em">
           <select class="custom-select" name="genre" style="width: 300px; margin: 1em" required>
