Change story text form placeholder

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -22,7 +22,7 @@
           <input class="form-control" type="text" name="flavour_text" style="width: 300px; margin: 1em">
           <label for"cover_photo">PHOTO:</label>
           <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url" style="width: 300px; margin: 1em">
-          <input class="form-control" type="text" name="text" placeholder="text" style="width: 300px; margin: 1em">
+          <input class="form-control" type="text" name="text" placeholder="Your story" style="width: 300px; margin: 1em">
           <select class="custom-select" name="genre" style="width: 300px; margin: 1em" required>
             <option value="" disabled selected hidden>Select a genre</option>
             <option value="fable">Fable</option>
