--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -25,10 +25,23 @@
           <input class="form-control" type="text" name="text" placeholder="Your story" style="width: 300px; margin: 1em">
           <select class="custom-select" name="genre" style="width: 300px; margin: 1em" required>
             <option value="" disabled selected hidden>Select a genre</option>
-            <option value="fable">Fable</option>
             <option value="adventure">Adventure</option>
+            <option value="children's">Children's</option>
+            <option value="comedy">Comedy</option>
+            <option value="coming of age">Coming of age</option>
             <option value="fantasy">Fantasy</option>
+            <option value="folklore">Folklore</option>
+            <option value="historical">Historical</option>
             <option value="horror">Horror</option>
+            <option value="political">Political</option>
+            <option value="psychological">Psychological</option>
+            <option value="romance">Romance</option>
+            <option value="satire">Satire</option>
+            <option value="science fiction">Science Fiction</option>
+            <option value="spy">Spy</option>
+            <option value="thriller">Thriller</option>
+            <option value="western">Western</option>
+            <option value="yound adult">Young Adult</option>
           </select>
           <div class="form-check" style="margin: 1em">
             <input class="form-check-input" type="checkbox" name="is_complete" value="true">
