Add save button (currently has no endpoint) to match wireframe

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -49,6 +49,7 @@
               Mark story as completed and prevent any new contributions?
             </label>
           </div>
+          <button class="btn btn-secondary">Save</button>
           <button type="submit" class="btn btn-secondary" style="margin: 1em">Submit</button>
         </div>
       </form>
