--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,5 +4,6 @@
 @import './layout.scss';
 @import './components/pages/home_page.scss';
 @import './components/partials/side_panel';
+@import './components/pages/stories_news';
 
 
