--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -10,9 +10,9 @@
     <title>New Story</title>
   </head>
 
-  <body>
+  <body id="new-story-body">
 
-    <main style="margin: 1em;">
+    <main id="new-story-main">
       <h3>Write your story...</h3>
       <form class="form" action="/stories/new/" method="POST">
         <div class="form-group mb-2">
