--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -1,3 +1,8 @@
+/* stories_new.ejs */
+
+/*
+center entire form
+*/
 body#new-story-body {
   justify-content: center;
 }
@@ -9,6 +14,9 @@ main#new-story-main {
   min-height: 100vh;
 }
 
+/*
+set  form labels and forms side-by-side and center vertically
+*/
 .story-forms-labels {
   display: flex;
   align-items: center;
