--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -15,7 +15,7 @@
 <body id="new-story-body">
 
   <main id="new-story-main">
-    <h3>Write your story...</h3>
+    <h3 id="new-story-title" >Write your story...</h3>
     <form class="form" action="/stories/new/" method="POST">
       <div class="form-group mb-2">
         <div class="story-forms-labels">
