--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -10,6 +10,9 @@
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="../../styles/main.css" type="text/css" />
   <title>New Story</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;600;700&family=Spartan:wght@500;700&display=swap');
+  </style>
 </head>
 
 <body id="new-story-body">
