--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -6,6 +6,7 @@ center entire form
 body#new-story-body {
   justify-content: center;
   background-color: #E1CF8D;
+  font-family: 'Source Serif Pro', Times, serif;
 }
 
 main#new-story-main {
