--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -23,6 +23,9 @@ h3#new-story-title {
   margin: 2rem;
   display: flex;
   justify-content: center;
+  color: white;
+  font-weight: bold;
+  font-size: 36px;
 }
 
 /*
