--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -13,12 +13,15 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;600;700&family=Spartan:wght@500;700&display=swap');
   </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap');
+    </style>
 </head>
 
 <body id="new-story-body">
 
   <main id="new-story-main">
-    <h3 id="new-story-title" >Write your story...</h3>
+    <h3 id="new-story-title">Write your story...</h3>
     <form class="form" action="/stories/new/" method="POST">
       <div class="form-group mb-2">
         <div class="story-forms-labels">
