Format form labels to match wireframe

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -34,6 +34,10 @@ set  form labels and forms side-by-side and center vertically
 .story-forms-labels {
   display: flex;
   align-items: center;
+  font-family: 'Source Sans Pro', Times, serif;
+  font-weight: bold;
+  font-size: 1.6rem;
+  color: #FFFFFF;
 }
 
 .story-forms-labels > * {
