--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -23,9 +23,9 @@ h3#new-story-title {
   margin: 2rem;
   display: flex;
   justify-content: center;
-  color: white;
+  color: #FFFFFF;
   font-weight: bold;
-  font-size: 36px;
+  font-size: 3.6rem;
 }
 
 /*
