--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -33,7 +33,7 @@
           <input class="form-control" type="text" name="flavour_text" style="width: 300px; margin: 1em">
         </div>
         <div class="story-forms-labels">
-          <label for"cover_photo">PHOTO:</label>
+          <label for="cover_photo">PHOTO:</label>
           <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url"
             style="width: 300px; margin: 1em">
         </div>
