--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -38,7 +38,7 @@
             style="width: 300px; margin: 1em">
         </div>
         <input class="form-control" type="text" name="text" placeholder="Your story" style="width: 300px; margin: 1em">
-        <select class="custom-select" name="genre" style="width: 300px; margin: 1em" required>
+        <select class="form-control" name="genre" style="width: 300px; margin: 1em" required>
           <option value="" disabled selected hidden>Select a genre</option>
           <option value="adventure">Adventure</option>
           <option value="children's">Children's</option>
