Set style for form elements to match wireframe

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -43,3 +43,9 @@ set  form labels and forms side-by-side and center vertically
 .story-forms-labels > * {
   margin: 0;
 }
+
+.form-control {
+  background: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-radius: 0px;
+}
