--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -26,19 +26,18 @@
       <div class="form-group mb-2">
         <div class="story-forms-labels">
           <label for="title">TITLE:</label>
-          <input class="form-control" type="text" name="title" style="width: 300px; margin: 1em">
+          <input class="form-control" type="text" name="title">
         </div>
         <div class="story-forms-labels">
           <label for="flavour-text">CAPTION:</label>
-          <input class="form-control" type="text" name="flavour_text" style="width: 300px; margin: 1em">
+          <input class="form-control" type="text" name="flavour_text">
         </div>
         <div class="story-forms-labels">
           <label for="cover_photo">PHOTO:</label>
-          <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url"
-            style="width: 300px; margin: 1em">
+          <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url">
         </div>
-        <input class="form-control" type="text" name="text" placeholder="Your story" style="width: 300px; margin: 1em">
-        <select class="form-control" name="genre" style="width: 300px; margin: 1em" required>
+        <input class="form-control" type="text" name="text" placeholder="Your story">
+        <select class="form-control" name="genre" required>
           <option value="" disabled selected hidden>Select a genre</option>
           <option value="adventure">Adventure</option>
           <option value="children's">Children's</option>
@@ -65,7 +64,7 @@
           </label>
         </div>
         <button class="btn btn-secondary">Save</button>
-        <button type="submit" class="btn btn-secondary" style="margin: 1em">Submit</button>
+        <button type="submit" class="btn btn-secondary">Submit</button>
       </div>
     </form>
   </main>
