Set margins for form elements

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -49,3 +49,7 @@ set  form labels and forms side-by-side and center vertically
   border: none;
   border-radius: 0px;
 }
+
+.form-group > * {
+  margin: 0.5rem 0rem;
+}
