Add class to labels for targetting them specifically

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -25,15 +25,15 @@
     <form class="form" action="/stories/new/" method="POST">
       <div class="form-group mb-2">
         <div class="story-forms-labels">
-          <label for="title">TITLE:</label>
+          <label class="new-story" for="title">TITLE:</label>
           <input class="form-control" type="text" name="title">
         </div>
         <div class="story-forms-labels">
-          <label for="flavour-text">CAPTION:</label>
+          <label class="new-story" for="flavour-text">CAPTION:</label>
           <input class="form-control" type="text" name="flavour_text">
         </div>
         <div class="story-forms-labels">
-          <label for="cover_photo">PHOTO:</label>
+          <label class="new-story" for="cover_photo">PHOTO:</label>
           <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url">
         </div>
         <input class="form-control" type="text" name="text" placeholder="Your story">
