Add story styling with jquery, start contribution functions

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,5 +1,5 @@
 body {
-  max-width: 1440px; // to prevent stretching on ultra wide monitors
+  //max-width: 1440px; // to prevent stretching on ultra wide monitors
   display: flex;
 }
 
