Center body element

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -4,9 +4,11 @@
 center entire form
 */
 body#new-story-body {
+  min-width: max-content;
   justify-content: center;
+  align-items: center;
   background-color: #E1CF8D;
-  font-family: 'Source Serif Pro', Times, serif;
+  font-family: "Source Serif Pro", Times, serif;
 }
 
 main#new-story-main {
