center label text and normalize their proportions

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -55,3 +55,8 @@ set  form labels and forms side-by-side and center vertically
 .form-group > * {
   margin: 0.5rem 0rem;
 }
+
+label.new-story {
+  min-width: 25%;
+  text-align: center;
+}
