Update main element width to match wireframe

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -16,6 +16,8 @@ main#new-story-main {
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
+  width: 85%;
+  min-width: fit-content;
 }
 
 /*
