Adjust form title margins and text size

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -24,12 +24,12 @@ main#new-story-main {
 center form title
 */
 h3#new-story-title {
-  margin: 2rem;
+  margin: 10%;
   display: flex;
   justify-content: center;
   color: #FFFFFF;
   font-weight: bold;
-  font-size: 3.6rem;
+  font-size: 3rem;
 }
 
 /*
