--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -36,7 +36,7 @@
           <label class="new-story" for="cover_photo">PHOTO:</label>
           <input class="form-control" type="text" name="cover_photo" placeholder="Cover photo url">
         </div>
-        <input class="form-control" type="text" name="text" placeholder="Your story">
+        <input class="form-control" id="form-story-text" type="text" name="text" placeholder="Your story">
         <select class="form-control" name="genre" required>
           <option value="" disabled selected hidden>Select a genre</option>
           <option value="adventure">Adventure</option>
