Adjust height and margins to story-text-form

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -62,3 +62,8 @@ label.new-story {
   min-width: 25%;
   text-align: center;
 }
+
+#form-story-text {
+  margin: 1rem 0rem 3rem 0rem;
+  height: 25rem;
+}
