--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -67,3 +67,11 @@ label.new-story {
   margin: 1rem 0rem 3rem 0rem;
   height: 25rem;
 }
+
+/*
+form footer style
+*/
+
+#story-form-footer {
+  display: flex;
+}
