--- a/styles/base.scss
+++ b/styles/base.scss
@@ -14,12 +14,16 @@ $black: #000000;
 $purp: #6117ff;
 $gold: #E1CF8D;
 
+// Fonts
+$serif: 'Source Serif Pro', Times, serif;
+
 // Spacing
-$s-size: 1.2rem;
-$m-size: 1.6rem;
-$l-size: 3.2rem;
+$s-size: 1.4rem;
+$m-size: 2.4rem;
+$l-size: 3.6rem;
 $xl-size: 4.8rem;
-$mobile-breakpoint: 415px;
+$xxl-size: 8rem;
+$desktop-breakpoint: 1200px;
 
 // Panel Widths
 $side-panel-width: 37.5%;
