--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,13 +11,17 @@
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/base.css" type="text/css" />
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!-- Fonts -->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Source+Serif+Pro:wght@400;600;700&family=Spartan:wght@500;700&display=swap');
+  </style>
 </head>
 
 <body>
@@ -26,15 +30,25 @@
     <%- include('./partials/_side_panel') %>
   </div>
 
-  <div class="main-body">
-    <h1>STORY CREATOR</h1>
+  <div class="main-body text-body">
+    <div class="homepage-wrapper">
+      <h1>Welcome, User!</h1>
+      <div class="story-details">
+        <div class="name-title">
+          <h2 class="homepage-title">The Milkmaid and Her Pail</h2>
+          <p class="homepage-author">Kira Kira</p>
+        </div>
+        <div class="status-genre">
+          <p class="story-status">(In Progress)</p>
+          <p class="genre">Sci-Fi</p>
+        </div>
+      </div>
+      <p class="homepage-flavourtext">
+        A Milkmaid had been out to milk the cows and was returning from the field with the shining milk pail balanced nicely on her head. As she walked along, her pretty head was busy with plans for the days to come.
+      </p>
+
 
   </div>
-
-
-
-
-
 
 
 
