Add class to form buttons to target

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -58,8 +58,8 @@
             <option value="western">Western</option>
             <option value="yound adult">Young Adult</option>
           </select>
-          <button class="btn btn-secondary">Save</button>
-          <button type="submit" class="btn btn-secondary">Submit</button>
+          <button class="btn btn-secondary new-story-button">Save</button>
+          <button type="submit" class="btn btn-secondary new-story-button">Submit</button>
         </div>
       </div>
     </form>
