Create and style side panel div. To-do: make dynamic

--- a/views/partials/_side_panel.ejs
+++ b/views/partials/_side_panel.ejs
@@ -1,9 +1,15 @@
 <div id="side-panel">
-  <img src="/images/book-reader-solid.svg" id="logo" alt="Logo" fill="white">
+  <!-- <img src="/images/book-reader-solid.svg" id="logo" alt="Logo" fill="white"> -->
+  <div class="side-panel-top">
+    <h2>Wb;</h2>
+    <h3>Writer's Block</h3>
+  </div>
 
-  <h2>LOGO</h2>
-
-
+  <div class="side-panel-bottom">
+    <h2>Story A: A Sprint to Finish</h2>
+    <p>flavour flavour flavour flavour flavour flavour flavour flavour flavour flavour flavour flavour flavour</p>
+    <button>LOGOUT</button>
+  </div>
 
 
 
