Add form button styles

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -75,3 +75,12 @@ form footer style
 #story-form-footer {
   display: flex;
 }
+
+.new-story-button {
+  border-radius: 50px;
+  background-color: inherit;
+  color: black;
+  font-weight: bold;
+  border-width: 0.09rem;
+  border-color: black;
+}
