Add Roboto font family

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -83,4 +83,5 @@ form footer style
   font-weight: bold;
   border-width: 0.09rem;
   border-color: black;
+  font-family: 'Roboto', Times, serif;
 }
