--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -16,6 +16,9 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap');
   </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+    </style>
 </head>
 
 <body id="new-story-body">
@@ -38,7 +41,7 @@
         </div>
         <input class="form-control" id="form-story-text" type="text" name="text">
         <div id="story-form-footer">
-          <select class="form-control" name="genre" required>
+          <!-- <select class="form-control" name="genre" required>
             <option value="" disabled selected hidden>Select a genre</option>
             <option value="adventure">Adventure</option>
             <option value="children's">Children's</option>
@@ -57,9 +60,9 @@
             <option value="thriller">Thriller</option>
             <option value="western">Western</option>
             <option value="yound adult">Young Adult</option>
-          </select>
-          <button class="btn btn-secondary new-story-button">Save</button>
-          <button type="submit" class="btn btn-secondary new-story-button">Submit</button>
+          </select> -->
+          <button class="btn btn-secondary new-story-button">S A V E</button>
+          <button type="submit" class="btn btn-secondary new-story-button">S U B M I T</button>
         </div>
       </div>
     </form>
