--- a/views/pages/story_page.ejs
+++ b/views/pages/story_page.ejs
@@ -54,7 +54,7 @@
 
 <div id="all-contributions">
 
-  <div class ="contribution-container">
+  <!-- <div class ="contribution-container">
     <div class="contribution-content">
       <div class ="contribution-heading">
         <h3 class= "contribution-title">"Contribution 1 to Story 1"</h3>
@@ -66,7 +66,7 @@
       <tag>0</tag>
       <i class="fas fa-chevron-down"></i>
     </div>
-  </div>
+  </div> -->
 
 </div>
 
