Add header and logo

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -22,6 +22,11 @@
 </head>
 
 <body id="new-story-body">
+  <header>
+    <div class="side-panel-top">
+      <h2>Wb;</h2>
+    </div>
+  </header>
 
   <main id="new-story-main">
     <h3 id="new-story-title">Write your story...</h3>
