--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -22,7 +22,7 @@
 </head>
 
 <body id="new-story-body">
-  <header>
+  <header id="new-story-header">
     <div class="side-panel-top">
       <h2>Wb;</h2>
     </div>
