--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -18,13 +18,20 @@
   </style>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
-    </style>
+  </style>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
 </head>
 
 <body id="new-story-body">
   <header id="new-story-header">
-    <div class="side-panel-top">
+    <div class="side-panel-top new-story-left-header">
       <h2>Wb;</h2>
+    </div>
+
+    <div class="new-story-right-header">
+      <i class="fas fa-arrow-left"></i>
     </div>
   </header>
 
