--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -92,9 +92,10 @@ form footer style
 }
 
 #new-story-header {
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   color: $white;
 }
 
@@ -102,4 +103,6 @@ form footer style
   margin: 0;
 }
 
-
+.new-story-right-header {
+  font-size: 5rem;
+}
