Add margins to header elements and style right-header arrow element to align with left-header logo

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -100,9 +100,11 @@ form footer style
 }
 
 #new-story-header * {
-  margin: 0;
+  margin: 1rem 2rem 0rem;
 }
 
 .new-story-right-header {
   font-size: 5rem;
+  padding-top: 2.5rem;
+  align-self: center;
 }
