Set max width for main element (so it caps for larger screens)

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -17,6 +17,7 @@ main#new-story-main {
   justify-content: center;
   width: 85%;
   min-width: fit-content;
+  max-width: 60vw;
   margin: 0px;
 }
 
