--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -25,7 +25,7 @@ main#new-story-main {
 center form title
 */
 h3#new-story-title {
-  margin: 10%;
+  margin: 5% 0% 10%;
   display: flex;
   justify-content: center;
   color: #FFFFFF;
