Align form labels to the right

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -61,7 +61,7 @@ set  form labels and forms side-by-side and center vertically
 
 label.new-story {
   min-width: 25%;
-  text-align: center;
+  text-align: right;
 }
 
 #form-story-text {
