Align form labels

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -60,8 +60,9 @@ set  form labels and forms side-by-side and center vertically
 }
 
 label.new-story {
-  min-width: 25%;
+  width: 15%;
   text-align: right;
+  padding-right: 5%;
 }
 
 #form-story-text {
