--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -19,6 +19,9 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
   </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap');
+  </style>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
