Change form labels to use Montserrat

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -63,6 +63,9 @@ label.new-story {
   width: 15%;
   text-align: right;
   padding-right: 5%;
+  font-family: Montserrat, Times, serif;
+  font-size: 1.25rem;
+  font-weight: 600;
 }
 
 #form-story-text {
