Adjust form border radius for a smoother appearance

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -52,7 +52,7 @@ set  form labels and forms side-by-side and center vertically
 .form-control {
   background: rgba(255, 255, 255, 0.5);
   border: none;
-  border-radius: 0px;
+  border-radius: 0.33rem;
 }
 
 .form-group > * {
