Change text form element to textarea to allow line breaking

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -54,7 +54,7 @@
           <label class="new-story" for="cover_photo">PHOTO:</label>
           <input class="form-control" type="text" name="cover_photo">
         </div>
-        <input class="form-control" id="form-story-text" type="text" name="text">
+        <textarea class="form-control" id="form-story-text" type="text" name="text"></textarea>
         <div id="story-form-footer">
           <!-- <select class="form-control" name="genre" required>
             <option value="" disabled selected hidden>Select a genre</option>
