--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
   </style>
 </head>
 
-<body>
+<body id="body">
 
   <div class="side-panel-container">
     <%- include('./partials/_side_panel') %>
