--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -55,18 +55,30 @@ set  form labels and forms side-by-side and center vertically
   border-radius: 0.33rem;
 }
 
+input.form-control {
+  width: 80%;
+}
+
 .form-group > * {
   margin: 0.5rem 0rem;
 }
 
 label.new-story {
-  width: 15%;
+  width: 20%;
+  margin-right: 1.75rem;
   text-align: right;
-  padding-right: 5%;
   font-family: Montserrat, Times, serif;
   font-size: 1.25rem;
   font-weight: 600;
 }
+
+@media only screen and (min-width: 1024px) {
+label.new-story {
+margin-right: 0rem;
+padding-right: 1rem;
+  }
+}
+
 
 #form-story-text {
   margin: 2rem 0rem 3rem 0rem;
@@ -102,7 +114,7 @@ form footer style
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  color: $white;
+  color: #ffffff;
 }
 
 #new-story-header * {
