Add padding to text form input field

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -82,8 +82,9 @@ padding-right: 1rem;
 
 #form-story-text {
   margin: 2rem 0rem 3rem 0rem;
-  height: 35rem;
+  height: 40vh;
   resize: none;
+  padding: 2.5rem;
 }
 
 /*
